--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
         <nav>
             <div class="logo">Андрей Браун</div>
             <div class="menu">
-                <ul>
+                <lu>
                     <li>Обо мне</li>
                     <li>Услуги</li>
                     <li>Кейсы</li>
                     <li>Прайс</li>
                     <li>Отзывы</li>
                     <li>Контакты</li>
-                </ul>
+                </lu>
             </div>
         </nav>
     </header>
@@ -105,11 +105,11 @@
     <input type="text" placeholder="Сообщение"><br>
     <input type="submit" value="Отправить">
 <br>
-<a href="https://www.facebook.com" target="_blank">facebook</a>
-<a href="https://twitter.com" target="_blank">twitter</a>
-<a href="https://dribbble.com" target="_blank">dribbbler</a>
-<a href="https://github.com" target="_blank">github</a>
-<a href="https://www.instagram.com" target="_blank">instagran</a>
+<a href="https://www.facebook.com" target="_blank"> <img src=> </a>
+<a href="https://twitter.com" target="_blank"><img src=></a>
+<a href="https://dribbble.com" target="_blank"><img src=></a>
+<a href="https://github.com" target="_blank"><img src=></a>
+<a href="https://www.instagram.com" target="_blank"><img src=></a>
 </body>
 <p>Copyright © 2021 Андрей Браун. Design by Web</p>
 </html>
